0.20.5
-updated readme
-updated guide
-formatting