@@ -2,19 +2,16 @@
 ###### (in all honesty no one actually asked these questions but they did seem relevant)
 
 ## what is this?
-Clicks is a semi-passive game made in Kotlin. The twist is that you get granular control over every aspect of the core game mechanics!
+Clicks is a semi-passive game made in Kotlin. The twist is that you get granular control over (almost) every aspect of the core game mechanics!
 
 ## when will development be finished?
-Honestly difficult to say; I work on it such that I don't get bored, plus life obligations. So..... eventually!
-
-## is there lore?
-No, and I'm not really planning on adding a story.
+Honestly difficult to say; I work on it as I feel inspiration, plus life obligations. So..... eventually!
 
 ## how long is the game?
-The most "efficient" way to play is probably to run it in the background and interact once in a while. As for the play time, technically speaking you could play for a very, very long time with the prestige system.
+The most "efficient" way to play is probably to run it in the background and interact once in a while. As for the play time, technically speaking you could play for a very long time with the prestige system.
 
 ## how do I play?
-Check out the [playing guide](guide.md) included locally! The guide version corresponds with the version of the game you have installed. Or, use the [remote repository](https://github.com/willowyx/clicks/blob/main/guide.md) for the most recent version of the guide.
+Check out the [playing guide](guide.md)! The guide version corresponds with the version of the game you have installed. Or, use the [remote repository](https://github.com/willowyx/clicks/blob/main/guide.md) for the most recent version of the guide.
 
 ## what new features can I expect?
 These features **will** be implemented by the 1.0 release:
@@ -29,7 +26,18 @@ These features **will** be implemented by the 1.0 release:
 As I think of other things I will add them to this "roadmap" but the current list will not get smaller.
 
 ## can I grab code from this?
-Do literally whatever you want with it. Just remember to do the standard MIT license stuff.
+Yes
+
+# building clicks
+
+## Java version
+clicks requires JDK 21, whether you are building or running the game, although I've tested with JDK 25 as well which works fine.
+
+## on mac
+on Mac, clicks may require these JVM options to run correctly:
+* `-XstartOnFirstThread`
+* `--enable-native-access=ALL-UNNAMED`
+
 
 # contact
-shoot me an email: [haii@willowyx.dev](mailto:haii@willowyx.dev)
+email me: [haii@willowyx.dev](mailto:haii@willowyx.dev)
